# quadrilateral-cowboy

./: CMakeLists.txt  MayaImport.vcxproj  _Common.props  _Curl.props  _Debug.props  _Dedicated.props  _DoomDLL.props  _Game-d3xp.props  _Game.props  _MayaImport.props  _Release.props  _TypeInfo.props  _WithInlines.props  _WithMemoryLog.props  _idlib.props  curllib.vcxproj  doomdll.vcxproj  game-d3xp.vcxproj  game.vcxproj  idlib.vcxproj  quadcow.sln  typeinfo.vcxproj
MayaImport/: exporter.h  maya_main.cpp
TypeInfo/: TypeInfoGen.cpp  TypeInfoGen.h  main.cpp
cm/: CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_trace.cpp  CollisionModel_translate.cpp
d3xp/: AF.cpp  AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  BrittleFracture.cpp  BrittleFracture.h  CMakeLists.txt  Camera.cpp  Camera.h  EndLevel.cpp  EndLevel.h  Entity.cpp  Entity.h  Fx.cpp  Fx.h  Game.h  GameEdit.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Grabber.cpp  Grabber.h  IK.cpp  Item.cpp  Item.h  Light.cpp  Light.h  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerIcon.cpp  PlayerIcon.h  (+85 more)
d3xp/ai/: AAS.cpp  AAS_debug.cpp  AAS_pathing.cpp  AAS_routing.cpp  AI.cpp  AI.h  AI_Vagary.cpp  AI_events.cpp  AI_pathing.cpp
d3xp/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp  Anim_Import.cpp  Anim_Testmodel.cpp
d3xp/gamesys/: Class.cpp  Class.h  DebugGraph.cpp  Event.cpp  Event.h  SaveGame.cpp  SaveGame.h  SysCmds.cpp  SysCvar.cpp  SysCvar.h  TypeInfo.cpp
d3xp/physics/: Clip.cpp  Clip.h  Force.cpp  Force.h  Force_Constant.cpp  Force_Constant.h  Force_Drag.cpp  Force_Drag.h  Force_Field.cpp  Force_Field.h  Force_Grab.cpp  Force_Grab.h  Force_Spring.cpp  Physics.h  Physics_AF.cpp  Physics_AF.h  Physics_Actor.cpp  Physics_Actor.h  Physics_Parametric.cpp  Physics_Parametric.h  Physics_Player.cpp  Physics_Player.h  Physics_RigidBody.cpp  Physics_Static.cpp  Physics_Static.h  Physics_StaticMulti.cpp  Physics_StaticMulti.h  Push.cpp  Push.h
d3xp/script/: Script_Compiler.cpp  Script_Compiler.h  Script_Interpreter.cpp  Script_Interpreter.h  Script_Program.cpp  Script_Program.h  Script_Thread.cpp  Script_Thread.h
framework/: BuildDefines.h  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  Compressor.cpp  Compressor.h  Console.cpp  Console.h  DeclAF.cpp  DeclAF.h  DeclEntityDef.cpp  DeclEntityDef.h  DeclFX.cpp  DeclFX.h  DeclManager.cpp  DeclManager.h  DeclPDA.cpp  DeclPDA.h  DeclParticle.cpp  DeclParticle.h  DeclSkin.cpp  DeclSkin.h  DeclTable.cpp  DeclTable.h  DemoFile.cpp  DemoFile.h  EditField.cpp  EditField.h  EventLoop.cpp  EventLoop.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  KeyInput.cpp  KeyInput.h  Licensee.h  (+8 more)
game/: AF.h  AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  BrittleFracture.cpp  BrittleFracture.h  CMakeLists.txt  Camera.cpp  Camera.h  EndLevel.cpp  Entity.cpp  Entity.h  Fx.cpp  Game.h  GameEdit.cpp  GameEdit.h  Game_local.cpp  Game_local.h  Game_network.cpp  IK.h  Item.cpp  Item.h  Light.cpp  Light.h  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerIcon.cpp  PlayerIcon.h  PlayerView.cpp  PlayerView.h  Projectile.cpp  (+16 more)
game/ai/: AAS.h  AAS_local.h  AAS_routing.cpp  AI.cpp  AI.h  AI_events.cpp  AI_pathing.cpp
game/anim/: Anim.h  Anim_Blend.cpp  Anim_Import.cpp  Anim_Testmodel.cpp  Anim_Testmodel.h
game/gamesys/: Class.cpp  Class.h  DebugGraph.h  Event.cpp  Event.h  GameTypeInfo.h  SaveGame.cpp  SysCmds.cpp  SysCvar.cpp
game/physics/: Clip.cpp  Force_Field.cpp  Force_Field.h  Force_Spring.h  Physics.cpp  Physics_AF.cpp  Physics_AF.h  Physics_Base.cpp  Physics_Base.h  Physics_Monster.cpp  Physics_Monster.h  Physics_Parametric.cpp  Physics_Parametric.h  Physics_Player.cpp  Physics_Player.h  Physics_RigidBody.cpp  Physics_RigidBody.h
game/script/: Script_Compiler.cpp  Script_Compiler.h  Script_Interpreter.cpp  Script_Interpreter.h  Script_Program.h  Script_Thread.cpp  Script_Thread.h
idlib/: Base64.cpp  Base64.h  BitMsg.cpp  BitMsg.h  CMakeLists.txt  CmdArgs.cpp  CmdArgs.h  Dict.cpp  Dict.h  FloatExceptions.h  Heap.cpp  Heap.h  LangDict.cpp  LangDict.h  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  MapFile.cpp  MapFile.h  Parser.cpp  Parser.h  Str.cpp  Str.h  Timer.cpp  Timer.h  Token.cpp  Token.h  precompiled.h
openal/: idal.cpp  stubs.cpp
renderer/: Cinematic.cpp  Cinematic.h  GuiModel.cpp  GuiModel.h  Image.h  Image_files.cpp  Image_init.cpp  Image_load.cpp  Image_process.cpp  Image_program.cpp  Interaction.cpp  Interaction.h  Material.cpp  Material.h  MegaTexture.cpp  MegaTexture.h  Model.cpp  Model.h  ModelDecal.cpp  ModelDecal.h  ModelManager.cpp  ModelManager.h  ModelOverlay.cpp  ModelOverlay.h  Model_ase.cpp  Model_ase.h  Model_beam.cpp  Model_liquid.cpp  Model_local.h  Model_lwo.cpp  Model_lwo.h  Model_ma.cpp  Model_ma.h  Model_md3.cpp  Model_md5.cpp  Model_prt.cpp  Model_sprite.cpp  RenderEntity.cpp  RenderSystem.cpp  RenderSystem.h  (+40 more)
sound/: snd_cache.cpp  snd_decoder.cpp  snd_efxfile.cpp  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_wavefile.cpp  snd_world.cpp  sound.h
sound_oal/: efxlib.h  snd_cache.cpp  snd_decoder.cpp  snd_efxfile.cpp  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_wavefile.cpp  snd_world.cpp  sound.h
sys/: events.cpp  glimp.cpp  sys_local.cpp  sys_local.h  sys_public.h
tools/: edit_stub.cpp
ui/: BindWindow.cpp  BindWindow.h  ChoiceWindow.cpp  ChoiceWindow.h  DeviceContext.cpp  DeviceContext.h  EditWindow.cpp  EditWindow.h  FieldWindow.cpp  GameBearShootWindow.cpp  GameBearShootWindow.h  GameBustOutWindow.cpp  GameBustOutWindow.h  GameSSDWindow.cpp  GameSSDWindow.h  GameWindow.cpp  GameWindow.h  GuiScript.cpp  GuiScript.h  ListGUI.cpp  ListGUI.h  ListGUILocal.h  ListWindow.cpp  ListWindow.h  MarkerWindow.cpp  Rectangle.h  RegExp.cpp  RegExp.h  RegExp_old.h  Window.cpp  (+14 more)
(+478 files in other folders)
