add_executable(
        game
        airlock.cpp
        ai/AAS.cpp
        ai/AAS_debug.cpp
        ai/AAS_pathing.cpp
        ai/AAS_routing.cpp
        ai/AI.cpp
        ai/AI_events.cpp
        ai/AI_pathing.cpp
        ai/AI_Vagary.cpp
        animloop.cpp
        anim/Anim.cpp
        anim/Anim_Blend.cpp
        anim/Anim_Import.cpp
        anim/Anim_Testmodel.cpp
        bluebox.cpp
        button_switcher.cpp
        camerapoint.cpp
        camturret.cpp
        clock.cpp
        commentary.cpp
        contractcamera.cpp
        countdowntimer.cpp
        cybervendor.cpp
        doorfolding.cpp
        frobcube.cpp
        gamesys/Class.cpp
        gamesys/DebugGraph.cpp
        gamesys/Event.cpp
        gamesys/SaveGame.cpp
        gamesys/SysCmds.cpp
        gamesys/SysCvar.cpp
        gamesys/TypeInfo.cpp
        itemgate.cpp
        jellypoint.cpp
        keypad.cpp
        laserwire.cpp
        launcher.cpp
        lever.cpp
        panel.cpp
        physics/Clip.cpp
        physics/Force.cpp
        physics/Force_Constant.cpp
        physics/Force_Drag.cpp
        physics/Force_Field.cpp
        physics/Force_Grab.cpp
        physics/Force_Spring.cpp
        physics/Physics.cpp
        physics/Physics_Actor.cpp
        physics/Physics_AF.cpp
        physics/Physics_Base.cpp
        physics/Physics_Monster.cpp
        physics/Physics_Parametric.cpp
        physics/Physics_Player.cpp
        physics/Physics_RigidBody.cpp
        physics/Physics_Static.cpp
        physics/Physics_StaticMulti.cpp
        physics/Push.cpp
        picker.cpp
        powersawgeneric.cpp
        powerscrewgeneric.cpp
        qglass.cpp
        rotdoor.cpp
        screw.cpp
        script/Script_Compiler.cpp
        script/Script_Interpreter.cpp
        script/Script_Program.cpp
        script/Script_Thread.cpp
        Actor.cpp
        AF.cpp
        AFEntity.cpp
        BrittleFracture.cpp
        Camera.cpp
        Entity.cpp
        Fx.cpp
        Game_local.cpp
        Game_network.cpp
        GameEdit.cpp
        Grabber.cpp
        IK.cpp
        Item.cpp
        Light.cpp
        Misc.cpp
        Moveable.cpp
        Mover.cpp
        MultiplayerGame.cpp
        Player.cpp
        PlayerIcon.cpp
        PlayerView.cpp
        sentry.cpp
        tablefold.cpp
        trembler.cpp
        turret.cpp
        weevil.cpp
        worldmanager.cpp
        worldman_moveable.cpp
        zeppelinbig.cpp
        ../idlib/precompiled.cpp
        Projectile.cpp
        Pvs.cpp
        SecurityCamera.cpp
        SmokeParticles.cpp
        Sound.cpp
        Target.cpp
        Trigger.cpp
        Weapon.cpp
        WorldSpawn.cpp
)

target_link_libraries(game typeinfo curl vorbis doomlib ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS} ${OPENAL_LIBRARY} ${OPENGL_LIBRARIES} ${VORBIS_LIBRARY} ${VORBISFILE_LIBRARY})
